<resources>
    <string name="app_name">Productos JAD</string>

    <!--Hints-->
    <string name="hint_product_name">Product name</string>
    <string name="hint_product_desc">Product desc</string>
    <string name="hint_money">$40.00</string>
    <string name="hint_quantity">Quantity: 3</string>

    <!--Labels-->
    <string name="lbl_amount">Amount</string>
    <string name="lbl_add_to_order">Add to order</string>
    <string name="lbl_skip">Skip</string>
    <string name="lbl_total">Total</string>
    <string name="lbl_client_info">Client Info</string>
    <string name="lbl_bsns_name">Business name</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_phone">Phone</string>

    <!--Navigation Bar-->
    <string name="title_cart">Order</string>
    <string name="title_settings">Settings</string>
    <string name="title_category">Category</string>

    <!--Buttons-->
    <string name="btn_checkout">Checkout</string>
    <string name="btn_return">Return</string>
    <string name="btn_save">Save</string>

    <!--Preference keys-->
    <string name="key_bsns_name">Name</string>
    <string name="key_address">Address</string>
    <string name="key_phone">Phone</string>

</resources>
