<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorIcons"
        android:paddingBottom="16dp">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            tools:layout_editor_absoluteX="0dp"
            android:id="@+id/imgProduct"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:text="@string/hint_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtProdName"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imgProduct"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:textSize="@dimen/font_body_1"/>

    <TextView
            android:text="@string/hint_product_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtProdDesc"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtProdName"
            android:textSize="@dimen/font_body_2"/>

    <TextView
            android:id="@+id/txtQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_quantity"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtProdDesc"
            android:layout_marginTop="16dp"
            android:textSize="@dimen/font_body_1"/>

    <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sbQuantity"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtQuantity"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:padding="16dp"/>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_add_to_order"
            android:background="@color/colorPrimary"
            android:padding="8dp"
            android:textColor="@color/colorIcons"
            android:layout_marginTop="16dp"
            android:textSize="@dimen/font_button"
            app:layout_constraintTop_toBottomOf="@+id/sbQuantity"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/btnAddOrder"/>

    <Button android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/btnSkip"
            android:background="@color/colorIcons"
            android:textColor="@color/colorPrimary"
            android:text="@string/lbl_skip"
            android:padding="8dp"
            android:textSize="@dimen/font_button"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/btnAddOrder"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/sbQuantity"/>
</android.support.constraint.ConstraintLayout>