<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <!--TextView to test the navigation bar-->
    <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/title_cart"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <!--Navigation bar-->
    <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/navigation"
            app:itemBackground="@color/colorPrimary"
            app:itemIconTint="@color/colorIcons"
            app:itemTextColor="@color/colorIcons"/>

    <!--Product List-->
    <android.support.v7.widget.RecyclerView
            android:id="@+id/rvProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/navigation"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <!--Shopping cart view-->
    <android.support.constraint.ConstraintLayout
            android:id="@+id/clShoppingCart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#99000000">

        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:layout_marginBottom="96dp">

            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                        android:id="@+id/rvShoppingCart"
                        android:layout_width="match_parent"
                        android:layout_height="191dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toTopOf="@+id/view"/>

                <View
                        style="@style/Divider.Horizontal"
                        app:layout_constraintBottom_toTopOf="@+id/lblTotal"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent" android:id="@+id/view"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_total"
                        android:layout_marginBottom="24dp"
                        android:textSize="@dimen/font_h5"
                        app:layout_constraintBottom_toTopOf="@+id/btnReturn"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="24dp"
                        android:id="@+id/lblTotal"/>

                <TextView
                        android:id="@+id/txtTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_money"
                        android:textSize="@dimen/font_body_1"
                        android:layout_marginEnd="24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginBottom="24dp"
                        app:layout_constraintBottom_toTopOf="@+id/btnReturn"/>

                <Button
                        android:id="@+id/btnCheckout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_button"
                        android:text="@string/btn_checkout"
                        android:background="@color/colorAccent"
                        android:textColor="@color/colorIcons"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"/>

                <Button
                        android:id="@+id/btnReturn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_button"
                        android:text="@string/btn_return"
                        android:background="@color/colorIcons"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginBottom="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toStartOf="@+id/btnCheckout" android:onClick="hideShoppingCart"/>
            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>